#36 suppress deprecation of MODULE_ROOT_TYPE_KEY
This is the only workaround found so far to get references in kte templates halfway working